--- a/css/styles.css
+++ b/css/styles.css
@@ -269,6 +269,84 @@ button {
 
 .mob-menu-nav {
     margin-bottom: auto;
+    display: flex;
+    flex-direction: column;
+    width: 151px;
+    height: 200px;
+}
+
+.mob-nav-list {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.mob-nav-link {
+    font-weight: 700;
+    font-size: 36px;
+    letter-spacing: 0.02em;
+    line-height: 1.11;
+    color: #2e2f42;
+}
+
+.mob-nav-link.current {
+    color: #404bbf;
+}
+
+.mob-contacts {
+    display: block;
+    width: 193px;
+    height: 72px;
+    margin-bottom: 48px;
+}
+
+.mob-contacts-list {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+ 
+.mob-link {
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.mob-link.tel {
+    color: #4d5ae5;
+}
+
+.mob-social {
+    height: 40px;
+}
+
+.mob-social-list {
+    display: flex;
+    gap: 40px;
+}
+
+.mob-social-item {
+    width: 40px;
+    height: 40px;
+}
+
+.mob-social-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.social-icon {
+    fill: #f4f4fd;
 }
 
 @media screen and (min-width: 768px) {
