--- a/css/styles.css
+++ b/css/styles.css
@@ -438,3 +438,94 @@ button {
         margin-bottom: 48px;
     }
 }
+
+/*section2*/
+.feature {
+    padding: 96px 0;
+}
+
+.feature-list {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+}
+
+.feature-item-icon {
+    display: none;
+}
+
+.feature-title {
+    margin-bottom: 8px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+}
+
+.feature-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .feature {
+        padding: 96px 0;
+    }
+
+    .feature-list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        column-gap: 24px;
+        row-gap: 72px;
+    }
+
+    .feature-item {
+        width: calc((100% - 24px) / 2);
+    }
+
+    .feature-title {
+        text-align: start;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .feature {
+        padding: 120px 0;
+    }
+    
+    .feature-list {
+        gap: 24px;
+    }
+    
+    .feature-item {
+        width: calc((100% - 72px)/4);
+    }
+
+    .feature-item-icon {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 112px;
+        background-color: #f4f4fd;
+        border-radius: 4px;
+        border: 1px solid #8e8f99;
+        margin-bottom: 8px;
+    }
+
+    .feature-title {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+    }
+
+    .feature-text {
+        font-weight: 400;
+    }
+}
