--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -4,38 +4,8 @@
 .social-link:hover,
 .social-link:focus {background-color: #404BBF;}
 
-/*section2*/
+/*section4*/
 
-.feature-list {
-    display: flex;
-    gap: 24px;
-}
-
-
-
-.feature-title,
-.team-list-title,
-.portfolio-item-title {
-    margin-bottom: 8px;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;}
-
-.feature-text,
-.team-list-text,
-.portfolio-item-text {font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;}
-
-/*section3*/
-.team {
-    padding: 120px 0;
-    background-color: #F4F4FD;
-}
-
-.team-title,
 .portfolio-title {
     margin-bottom: 72px;
     font-size: 36px;
@@ -46,55 +16,21 @@
     color: #2e2f42;
 }
 
-.team-list {
-    display: flex;
-    gap: 24px;
-}
-
-.team-item {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
-    width: calc((100% - 72px)/4);
-    border-radius: 0px 0px 4px 4px;
-    background-color: #FFFFFF;}
-
-.team-box {padding: 32px 0;}
-
-.team-list-title,
-.team-list-text {text-align: center;}
-
-.social-list {
-    display: flex;
-    justify-content: center;
-    gap: 24px;
-}
-
-.social-item {
-    width: 40px;
-    height: 40px;
-    }
-
-.social-link {
-    width: 100%;
-    height: 100%;
-    background-color: #4d5ae5;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
-}
-
-.social-icon {
-    fill: #f4f4fd;
-}
-
-.team-list-text {
+.portfolio-item-title {
     margin-bottom: 8px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
 }
 
-/*section4*/
+.portfolio-item-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
 .portfolio {
     padding-top: 120px;
     padding-bottom: 120px;
