--- a/css/styles.css
+++ b/css/styles.css
@@ -529,3 +529,121 @@ button {
         font-weight: 400;
     }
 }
+
+/*section3*/
+.team {
+    padding: 96px 0;
+    background-color: #F4F4FD;
+}
+
+.team-title {
+    margin-bottom: 71px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
+}
+
+.team-list {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+    margin-left: 12px;
+    margin-right: 12px;
+}
+
+.team-item {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+    border-radius: 0px 0px 4px 4px;
+    background-color: #FFFFFF;
+}
+
+.team-box {
+    padding: 32px 0;
+}
+
+.team-list-title {
+    margin-bottom: 8px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-align: center;
+}
+
+.team-list-text {
+    margin-bottom: 8px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #434455;
+}
+
+.social-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+.social-item {
+    width: 40px;
+    height: 40px;
+}
+
+.social-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.social-icon {
+    fill: #f4f4fd;
+}
+
+@media screen and (min-width: 768px) {
+    .team-title {
+        margin-bottom: 72px;}
+    
+    .team-list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        column-gap: 24px;
+        row-gap: 64px;
+        margin-left: 108px;
+        margin-right: 108px;
+        }
+    
+    .team-item {
+    width: calc((100% - 24px) / 2);
+        }
+}
+
+@media screen and (min-width: 1158px) {
+    .team-title {
+        margin-bottom: 120px;
+        }
+    
+    .team-list {
+        display: flex;
+        row-gap: 0;
+        margin-left: 0px;
+        margin-right: 0px;
+        }
+    
+    .team-item {
+        width: calc((100% - 72px)/4);
+    }
+}
