--- a/css/styles.css
+++ b/css/styles.css
@@ -362,7 +362,9 @@ button {
     margin-left: auto;
     margin-right: auto;
     background-color: #2e2f42;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/mob-hero.jpg);
+    background-image: 
+    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), 
+    url(../images/hero/mob-hero.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -370,7 +372,7 @@ button {
 
 @media (min-resoluton: 2x) {
     .banner {
-        background-image: url(../images/mob-hero@2x.jpg);
+        background-image: url(../images/hero/mob-hero@2x.jpg);
     }
 }
 
@@ -412,7 +414,7 @@ button {
         padding: 112px 0;
         background-image: 
         linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-        url(../images/tab-hero.jpg);
+        url(../images/hero/tab-hero.jpg);
         }
     
     .banner-title {
@@ -431,7 +433,7 @@ button {
         padding: 188px 0;
         background-image: 
         linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-        url(../images/desk-hero.jpg);
+        url(../images/hero/desk-hero.jpg);
     }
 
     .banner-title {
@@ -632,10 +634,6 @@ button {
 }
 
 @media screen and (min-width: 1158px) {
-    .team-title {
-        margin-bottom: 120px;
-        }
-    
     .team-list {
         display: flex;
         row-gap: 0;
@@ -674,6 +672,7 @@ button {
 .portfolio-item {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
     background: #fff;
+    width: 288px;
 }
 
 .portfolio-box {
@@ -718,13 +717,14 @@ button {
     .portfolio-item {
         width: calc((100% - 24px) / 2);
     }
-
-    .portfolio-image {
-        width="356";
-        src="./image/mob-s3-1@2";
-    }
-
-    
 }
 
-@media screen and (min-width: 1158px)
+@media screen and (min-width: 1158px) {
+    .portfolio-list {
+        row-gap: 48px;
+        }
+
+    .portfolio-item {
+        width: calc((100% - 48px) / 3);
+        }
+}
