--- a/css/styles.css
+++ b/css/styles.css
@@ -703,10 +703,6 @@ button {
 }
 
 @media screen and (min-width: 768px) {
-    .portfolio-title {
-        margin-bottom: 72px;
-    }
-
     .portfolio-list {
         flex-direction: row;
         flex-wrap: wrap;
@@ -715,16 +711,29 @@ button {
     }
 
     .portfolio-item {
+        box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08);
         width: calc((100% - 24px) / 2);
     }
 }
 
 @media screen and (min-width: 1158px) {
+    .portfolio {
+        padding-top: 120px;
+        padding-bottom: 120px;
+        }
     .portfolio-list {
         row-gap: 48px;
         }
 
     .portfolio-item {
         width: calc((100% - 48px) / 3);
+        box-shadow: none;
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+    .portfolio-item:hover {
+        box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+            0px 1px 1px rgba(46, 47, 66, 0.16),
+            0px 2px 1px rgba(46, 47, 66, 0.08);
         }
 }
