--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-/*hidden all section, to delete at the end*/
 .hidden {
     display: none;
 }
@@ -721,6 +720,7 @@ button {
         padding-top: 120px;
         padding-bottom: 120px;
         }
+
     .portfolio-list {
         row-gap: 48px;
         }
@@ -735,5 +735,108 @@ button {
         box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
             0px 1px 1px rgba(46, 47, 66, 0.16),
             0px 2px 1px rgba(46, 47, 66, 0.08);
+        }
+}
+
+/*footer*/
+.page-footer {
+    padding: 96px 0;
+    background-color: #2e2f42;
+}
+
+.container.footer {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 72px;
+}
+
+.footer-logo {
+    display: flex;
+    margin-bottom: 16px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 0px;
+}
+
+.footer-logo>.logo-part {
+    color: #f4f4fd
+}
+
+.footer-logo-text {
+    font-weight: 400;
+    font-size: 16px;
+    max-width: 288px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #F4F4FD;
+}
+
+.footer-social-wrap {
+   margin: 0 40px;
+}
+
+.footer-social-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+    text-align: center;
+}
+
+.footer-social-list {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-email {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-email-link {
+    width: 288px;
+    height: 40px;
+    border: 1px solid #ffffff;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    color: #ffffff;
+}
+
+.footer-email-link::placeholder {
+    color: white;
+}
+
+@media screen and (min-width: 768px) {
+    .page-footer {}
+}
+
+@media screen and (min-width: 1158px) {
+    .page-footer {
+        padding: 100px 0;
+        }
+    
+    .container.footer {
+        align-items: baseline;
+        }
+    
+    .footer-wrap {
+        margin: 0 120px 0 0;
+        }
+
+    .footer-social-wrap {
+        margin: 0 80px 0 0;
+        }
+    
+    .footer.social-link:hover,
+    .footer.social-link:focus {
+        background-color: #31d0aa;
         }
 }
